# ani

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile-danmaku-server  README.md  build.gradle.kts  docker-compose.yaml  gradle.properties  settings.gradle.kts
torrent/anitorrent/: .clang-format  .gitignore  CMakeLists.txt  README.md  anitorrent.i  build.gradle.kts  run-swig.sh
torrent/anitorrent/anitorrent-native/: .clang-format  CMakeLists.txt  README.md  anitorrent.i  run-swig.sh
torrent/anitorrent/anitorrent-native/include/: anitorrent.hpp  events.hpp  peer_filter.hpp  session_t.hpp  torrent_info_t.hpp
torrent/anitorrent/anitorrent-native/src/: global_lock.cpp  peer_filter.cpp  session_t.cpp  torrent_handle_t.cpp
torrent/anitorrent/include/: anitorrent.h  anitorrent.hpp  events.h  events.hpp  global_lock.h  peer_filter.hpp  session_t.h  session_t.hpp  torrent_add_info_t.hpp  torrent_handle_t.h  torrent_handle_t.hpp  torrent_info_t.hpp
torrent/anitorrent/include/plugin/: peer_filter_plugin.h
torrent/anitorrent/libs/boost/include/boost/: dll.hpp  json.hpp  mysql.hpp  outcome.hpp  pfr.hpp  stacktrace.hpp
torrent/anitorrent/libs/boost/include/boost/asio/detail/: config.hpp
torrent/anitorrent/libs/boost/include/boost/charconv/: from_chars.hpp  limits.hpp  to_chars.hpp
torrent/anitorrent/libs/boost/include/boost/charconv/detail/: bit_layouts.hpp  buffer_sizing.hpp  compute_float80.hpp  config.hpp  emulated128.hpp  fallback_routines.hpp  from_chars_integer_impl.hpp  generate_nan.hpp  issignaling.hpp  parser.hpp  to_chars_integer_impl.hpp
torrent/anitorrent/libs/boost/include/boost/cobalt/: config.hpp
torrent/anitorrent/libs/boost/include/boost/cobalt/detail/: forward_cancellation.hpp  join.hpp  leaf.hpp  spawn.hpp  task.hpp
torrent/anitorrent/libs/boost/include/boost/dll/: alias.hpp  config.hpp  import.hpp  import_class.hpp  import_mangled.hpp  library_info.hpp  runtime_symbol_info.hpp  shared_library.hpp  shared_library_load_mode.hpp  smart_library.hpp
torrent/anitorrent/libs/boost/include/boost/dll/detail/: aggressive_ptr_cast.hpp  elf_info.hpp  macho_info.hpp  pe_info.hpp  system_error.hpp
torrent/anitorrent/libs/boost/include/boost/interprocess/detail/: managed_open_or_create_impl.hpp
torrent/anitorrent/libs/boost/include/boost/interprocess/ipc/: message_queue.hpp
torrent/anitorrent/libs/boost/include/boost/json/: array.hpp  basic_parser.hpp  basic_parser_impl.hpp  conversion.hpp  is_deallocate_trivial.hpp  memory_resource.hpp  monotonic_resource.hpp  null_resource.hpp  object.hpp  parse.hpp  parse_into.hpp  parser.hpp  result_for.hpp  serializer.hpp  static_resource.hpp  storage_ptr.hpp  stream_parser.hpp  string.hpp  system_error.hpp  value.hpp  value_ref.hpp  value_stack.hpp  visit.hpp
torrent/anitorrent/libs/boost/include/boost/json/detail/: config.hpp  default_resource.hpp  except.hpp  handler.hpp  parse_into.hpp  shared_resource.hpp  sse2.hpp  utf8.hpp  value.hpp  value_from.hpp  value_to.hpp
torrent/anitorrent/libs/boost/include/boost/json/impl/: conversion.hpp  error.hpp  error.ipp  null_resource.ipp  parse.ipp  (+7 more)
torrent/anitorrent/libs/boost/include/boost/lambda2/: lambda2.hpp
torrent/anitorrent/libs/boost/include/boost/leaf/: capture.hpp  config.hpp  context.hpp  error.hpp  exception.hpp  handle_errors.hpp  on_error.hpp  result.hpp
torrent/anitorrent/libs/boost/include/boost/mysql/: any_address.hpp  any_connection.hpp  bad_field_access.hpp  blob.hpp  blob_view.hpp  buffer_params.hpp  character_set.hpp  client_errc.hpp  column_type.hpp  common_server_errc.hpp  connect_params.hpp  connection.hpp  connection_pool.hpp  constant_string_view.hpp  date.hpp  datetime.hpp  days.hpp  defaults.hpp  diagnostics.hpp  error_categories.hpp  error_code.hpp  error_with_diagnostics.hpp  escape_string.hpp  execution_state.hpp  field.hpp  field_kind.hpp  field_view.hpp  format_sql.hpp  handshake_params.hpp  mariadb_collations.hpp  mariadb_server_errc.hpp  metadata.hpp  metadata_collection_view.hpp  metadata_mode.hpp  mysql_collations.hpp  mysql_server_errc.hpp  pool_params.hpp  results.hpp  resultset.hpp  resultset_view.hpp  (+16 more)
torrent/anitorrent/libs/boost/include/boost/outcome/: bad_access.hpp  basic_outcome.hpp  basic_result.hpp  boost_outcome.hpp  boost_result.hpp  config.hpp  convert.hpp  coroutine_support.hpp  iostream_support.hpp  outcome.hpp  result.hpp  std_outcome.hpp  std_result.hpp  success_failure.hpp  trait.hpp  try.hpp  utils.hpp
torrent/anitorrent/libs/boost/include/boost/pfr/: config.hpp  core.hpp  functions_for.hpp  functors.hpp  io.hpp  io_fields.hpp  ops.hpp  ops_fields.hpp  tuple_size.hpp
torrent/anitorrent/libs/boost/include/boost/redis/: config.hpp  connection.hpp  request.hpp  src.hpp
torrent/anitorrent/libs/boost/include/boost/stacktrace/: frame.hpp  safe_dump_to.hpp  stacktrace.hpp  stacktrace_fwd.hpp  this_thread.hpp
torrent/anitorrent/libs/boost/include/boost/stl_interfaces/: sequence_container_interface.hpp  view_adaptor.hpp
torrent/anitorrent/libs/boost/include/boost/system/: result.hpp
torrent/anitorrent/libs/boost/include/boost/url/: error_types.hpp  optional.hpp  string_view.hpp  url_base.hpp  variant.hpp
torrent/anitorrent/src/: anitorrent.cpp  anitorrent_wrap.cpp  events.cpp  main.cpp  peer_filter.cpp  session_t.cpp  torrent_add_info_t.cpp  torrent_handle_t.cpp  torrent_info_t.cpp
torrent/anitorrent/src/commonMain/kotlin/: AnitorrentDownloaderFactory.kt
torrent/anitorrent/src/commonMain/kotlin/session/: AnitorrentDownloadSession.kt  TorrentDescriptor.kt  TorrentResumeData.kt
torrent/anitorrent/src/commonMain/kotlin/test/: TestAnitorrentTorrentDownloader.kt
torrent/anitorrent/src/jvmMain/kotlin/: AnitorrentDownloaderFactory.jvm.kt  AnitorrentLibraryLoader.kt  AnitorrentTorrentDownloader.jvm.kt
torrent/anitorrent/src/jvmMain/kotlin/session/: SwigPeerInfo.kt  SwigTorrentHandle.kt  SwigTorrentManagerSession.kt
torrent/anitorrent/src/nativeMain/kotlin/anitorrent/: AnitorrentTorrentDownloader.native.kt
torrent/anitorrent/src/plugin/: peer_filter_plugin.cpp
(+4303 files in other folders)
